--- a/app/javascript/flavours/polyam/styles/mastodon-light/variables.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon-light/variables.scss
@@ -64,4 +64,5 @@ $emojis-requiring-inversion: 'chains';
   --background-color: #fff;
   --background-color-tint: rgba(255, 255, 255, 90%);
   --background-filter: blur(10px);
+  --toot-focus-background-color: #{lighten($white, 4%)};
 }
