--- a/app/javascript/flavours/polyam/styles/forms.scss
+++ b/app/javascript/flavours/polyam/styles/forms.scss
@@ -615,9 +615,10 @@ code {
       font-family: inherit;
       pointer-events: none;
       cursor: default;
-      max-width: 140px;
+      max-width: 50%;
       white-space: nowrap;
       overflow: hidden;
+      text-overflow: ellipsis;
 
       &::after {
         content: '';
