[Polyam] Change sidebar text in web UI
Port b9fd7571aedbfda524ab48ba15c03bd3936b8b2c to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/signed_out.scss
+++ b/app/javascript/flavours/polyam/styles/components/signed_out.scss
@@ -2,8 +2,14 @@
   padding: 10px;
 
   p {
+    font-size: 15px;
+    line-height: 22px;
     color: $darker-text-color;
     margin-bottom: 20px;
+
+    strong {
+      font-weight: 700;
+    }
 
     a {
       color: $secondary-text-color;
@@ -22,14 +28,14 @@
 }
 
 .server-banner {
-  padding: 20px 0;
-
   &__introduction {
+    font-size: 15px;
+    line-height: 22px;
     color: $darker-text-color;
     margin-bottom: 20px;
 
     strong {
-      font-weight: 600;
+      font-weight: 700;
     }
 
     a {
@@ -57,6 +63,9 @@
   }
 
   &__description {
+    font-size: 15px;
+    line-height: 22px;
+    color: $darker-text-color;
     margin-bottom: 20px;
   }
 
