[Polyam] Change light mode to apply CSS variables to the body
Port 8c0ff6498e090a2919e8f8104339796ed2d3d212 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/mastodon-light/variables.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon-light/variables.scss
@@ -56,8 +56,7 @@ $account-background-color: $white !default;
 
 $emojis-requiring-inversion: 'chains';
 
-.skin-mastodon-light,
-.skin-system {
+body {
   --dropdown-border-color: #d9e1e8;
   --dropdown-background-color: #fff;
   --background-border-color: #d9e1e8;
