--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -9836,29 +9836,52 @@ noscript {
 
 // Polyam: Alt-text modal
 .alttext-modal {
-  max-width: 90vw;
-  background: $ui-base-color;
-  border-radius: 8px;
-  overflow-x: hidden;
+  flex-direction: column;
+  max-width: 600px;
   overflow-y: auto;
-  position: relative;
-  display: block;
-  padding: 20px;
 
-  &__action-bar {
+  &__top,
+  &__bottom {
     display: flex;
-    justify-content: center;
-    padding-top: 20px;
+    gap: 8px;
+    padding: 24px;
+    flex-direction: column;
+    background: var(--modal-background-color);
+    backdrop-filter: var(--background-filter);
+    border: 1px solid var(--modal-border-color);
   }
 
-  &__container {
+  &__top {
+    border-radius: 16px 16px 0 0;
+    border-bottom: 0;
+    gap: 16px;
+  }
+
+  &__bottom {
+    border-radius: 0 0 16px 16px;
+    border-top: 0;
+    padding-top: 0;
+
+    @media screen and (max-width: $no-gap-breakpoint) {
+      border-radius: 0;
+      border-bottom: 0;
+      padding-bottom: 32px;
+    }
+  }
+
+  &__actions {
     display: flex;
-    max-width: 600px;
-    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    justify-content: flex-end;
+  }
+
+  &__description {
+    font-size: 16px;
+    line-height: 22px;
 
     pre {
       white-space: pre-wrap;
-      font-size: 17px;
     }
   }
 }
