--- a/app/javascript/flavours/glitch/styles/homogay/diff.scss
+++ b/app/javascript/flavours/glitch/styles/homogay/diff.scss
@@ -213,7 +213,7 @@
 }
 
 // general modals
-.modal-root__modal:not(.safety-action-modal) {
+.modal-root__modal:not(.safety-action-modal, .alttext-modal) {
   background: $ui-base-color;
 }
 
