Fix background of alt-text-modal in FairyFloss
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
+++ b/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
@@ -142,7 +142,7 @@ button.icon-button.active {
 // Polyam: Apply background to modals,
 // but new mute and block modals need to be exempt
 // as otherwise it conflicts with border-radius
-.modal-root__modal:not(.safety-action-modal) {
+.modal-root__modal:not(.safety-action-modal, .alttext-modal) {
   background-color: lighten($purple2, 8%);
 }
 
