--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1625,8 +1625,7 @@ $ui-header-logo-wordmark-width: 99px;
 .filtered-notifications-banner {
   display: flex;
   align-items: center;
-  border: 1px solid var(--background-border-color);
-  border-top: 0;
+  border-bottom: 1px solid var(--background-border-color);
   padding: 15px; // Polyam: Keep old padding
   gap: 16px;
   color: $darker-text-color;
