[Polyam] Grouped Notifications UI
Port 7224e2405413b816b2fbc171a9a9e7b86bae0261 to polyam-glitch

Co-authored-by: Eugen Rochko <eugen@zeonfederated.com>
Co-authored-by: Claire <claire.github-309c@sitedethib.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: Claire <claire.github-309c@sitedethib.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1626,8 +1626,8 @@ $ui-header-logo-wordmark-width: 99px;
   display: flex;
   align-items: center;
   border-bottom: 1px solid var(--background-border-color);
-  padding: 15px; // Polyam: Keep old padding
-  gap: 16px;
+  padding: 16px 24px;
+  gap: 8px;
   color: $darker-text-color;
   text-decoration: none;
 
@@ -1637,10 +1637,8 @@ $ui-header-logo-wordmark-width: 99px;
     color: $secondary-text-color;
   }
 
-  .icon {
-    width: 24px;
-    height: 24px;
-    padding: 2px;
+  .notification-group__icon {
+    color: inherit;
   }
 
   &__text {
