--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -141,6 +141,11 @@
   display: flex;
   flex-shrink: 0;
 
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-right: 0;
+    border-left: 0;
+  }
+
   button {
     background: transparent;
     border: 0;
