[Polyam] Fix inconsistent padding in glitch-soc's grouped notifications
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -405,7 +405,7 @@
 }
 
 .notification-ungrouped {
-  padding: 16px 24px;
+  padding: 16px 14px; // glitch: reduced padding
   border-bottom: 1px solid var(--background-border-color);
 
   &__header {
