--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -267,9 +267,10 @@
     flex: 0 0 auto;
     color: $dark-text-color;
 
+    // Polyam: reduced icon size
     .icon {
-      width: 28px;
-      height: 28px;
+      width: 24px;
+      height: 24px;
     }
   }
 
