Fix inconsistent position of timestamps
For some reason the timestamp was always shown next to the text instead of a fixed point.
This makes the timestamp show on the top right.

This might be a markup issue, but this also works for now.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -332,6 +332,7 @@
         font-size: 15px;
         line-height: 22px;
         color: $darker-text-color;
+        justify-content: space-between; // Polyam: Consistent timestamps
 
         a {
           color: inherit;
