Grouped notification improvements (#626)
* Revert "Temporarily disable grouped notifications UI"

This reverts commit 7ea92d70bba966fa073106b019696ddd3db7a0cb.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>

* Fix margin for reactions-bar

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Reduce icon size in notifications

These were way too large.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Fix inconsistent position of timestamps

For some reason the timestamp was always shown next to the text instead of a fixed point.
This makes the timestamp show on the top right.

This might be a markup issue, but this also works for now.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

---------

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -267,9 +267,10 @@
     flex: 0 0 auto;
     color: $dark-text-color;
 
+    // Polyam: reduced icon size
     .icon {
-      width: 28px;
-      height: 28px;
+      width: 24px;
+      height: 24px;
     }
   }
 
@@ -331,6 +332,7 @@
         font-size: 15px;
         line-height: 22px;
         color: $darker-text-color;
+        justify-content: space-between; // Polyam: Consistent timestamps
 
         a {
           color: inherit;
@@ -462,7 +464,8 @@
   .picture-in-picture-placeholder,
   .more-from-author,
   .status-card,
-  .hashtag-bar {
+  .hashtag-bar,
+  .reactions-bar {
     margin-inline-start: $icon-margin;
     width: calc(100% - $icon-margin);
   }
