Hide reactions bar by default outside announcements
The empty bar has to be shown in announcements as otherwise the react button is also hidden.
But outside announcements it adds weird spacing and needs to be hidden.

Currently `.reactions-bar--empty` was and needed to be added to every place they were shown outside announcements to hide the empty bar.

This hides the empty reactions bar by default and adds an exception to announcements instead

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/announcements.scss
+++ b/app/javascript/flavours/polyam/styles/components/announcements.scss
@@ -97,6 +97,11 @@
       width: 0.625rem;
       height: 0.625rem;
     }
+
+    // Polyam: Show empty bar in announcements
+    .reactions-bar--empty {
+      display: flex;
+    }
   }
 
   // Polyam: Added display flex to align arrows better in FF, Chrome still slightly misaligned
@@ -234,6 +239,8 @@
   }
 
   &--empty {
+    display: none; // Polyam: hide by default
+
     .emoji-button {
       padding: 0;
     }
