--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -455,20 +455,7 @@
 
   $icon-margin: 48px; // 40px avatar + 8px gap
 
-  .status__content,
-  .status__action-bar,
-  .media-gallery,
-  .video-player,
-  .audio-player,
-  .attachment-list,
-  .picture-in-picture-placeholder,
-  .more-from-author,
-  .status-card,
-  .hashtag-bar,
-  .reactions-bar {
-    margin-inline-start: $icon-margin;
-    width: calc(100% - $icon-margin);
-  }
+  // Polyam: Removed margin and restricted width of elements here
 
   .more-from-author {
     width: calc(100% - $icon-margin + 2px);
