--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -84,13 +84,13 @@
   }
 
   .search__input {
-    border: 1px solid lighten($ui-base-color, 8%);
+    border: 1px solid var(--background-border-color);
     padding: 10px;
     padding-inline-end: 30px;
   }
 
   .search__popout {
-    border: 1px solid lighten($ui-base-color, 8%);
+    border: 1px solid var(--background-border-color);
   }
 
   .search .icon {
