--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -254,10 +254,21 @@
 
 // settings
 
+// Polyam: Keep background in admin UI a bit darker
+body.admin {
+  --background-color: #{darken($ui-base-color, 4%)};
+}
+
 .admin-wrapper {
   .sidebar ul .simple-navigation-active-leaf a,
   .content__heading__tabs a.selected {
-    background-color: $ui-highlight-color;
     text-shadow: 0 0 6px $faint-shadow-color;
+  }
+
+  // Polyam: Keep in different color to make it look less boring
+  .sidebar-wrapper {
+    &__inner {
+      background-color: $ui-base-color;
+    }
   }
 }
