--- a/app/javascript/flavours/polyam/styles/fairy-floss/variables.scss
+++ b/app/javascript/flavours/polyam/styles/fairy-floss/variables.scss
@@ -109,13 +109,13 @@ $font-sans-serif: 'mastodon-font-sans-serif' !default;
 $font-display: 'mastodon-font-display' !default;
 $font-monospace: 'mastodon-font-monospace' !default;
 
-:root {
-  --dropdown-border-color: #{lighten($purple3, 4%)} !important;
-  --dropdown-background-color: #{$purple3} !important;
-  --modal-background-color: #{lighten($ui-base-color, 8%)} !important;
-  --modal-background-variant-color: #{$ui-base-color} !important;
-  --background-border-color: #{lighten($ui-base-color, 8%)} !important;
-  --background-color: #{darken($ui-base-color, 4%)} !important;
-  --background-color-tint: #{darken($ui-base-color, 4%)} !important;
-  --surface-background-color: #{$purple1} !important;
+body {
+  --dropdown-border-color: #{lighten($purple3, 4%)};
+  --dropdown-background-color: #{$purple3};
+  --modal-background-color: #{lighten($ui-base-color, 8%)};
+  --modal-background-variant-color: #{$ui-base-color};
+  --background-border-color: #{lighten($ui-base-color, 8%)};
+  --background-color: #{darken($ui-base-color, 4%)};
+  --background-color-tint: #{darken($ui-base-color, 4%)};
+  --surface-background-color: #{$purple1};
 }
