Change backgrounds of inputs in admin UI in homogay
Changes input, select and textarea elements to have darker background.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -267,3 +267,17 @@ body.admin {
     }
   }
 }
+
+// Polyam: Make inputs darker than background
+.simple_form {
+  input[type='datetime-local'],
+  input[type='email'],
+  input[type='number'],
+  input[type='password'],
+  input[type='text'],
+  input[type='url'],
+  textarea,
+  select {
+    background-color: $black;
+  }
+}
