[Glitch] Hide reactions bar by default
Port 6441457e31bd8793a0504767c540b93b14cf6623 to glitch flavour

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -1591,11 +1591,6 @@ body > [data-popper-placement] {
     }
   }
 
-  // Reactions
-  .reactions-bar--empty {
-    display: none;
-  }
-
   .notification__message {
     margin-bottom: 0;
     white-space: nowrap;
@@ -1893,11 +1888,6 @@ body > [data-popper-placement] {
   .status__prepend {
     padding: 0;
     margin-bottom: 16px;
-  }
-
-  // Reactions
-  .reactions-bar--empty {
-    display: none;
   }
 }
 
@@ -9121,6 +9111,11 @@ noscript {
       width: 0.625rem;
       height: 0.625rem;
     }
+
+    // Polyam: Show empty bar in announcements
+    .reactions-bar--empty {
+      display: flex;
+    }
   }
 
   &__pagination {
@@ -9250,6 +9245,8 @@ noscript {
   }
 
   &--empty {
+    display: none; // Polyam: hide by default
+
     .emoji-button {
       padding: 0;
     }
