Add ability to search instances by comment
Adds a new text input to `/admin/instances`

Adds `by_comment` to InstanceFilter

Adds new scope to search for domain block comments to instance model

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/instances/index.html.haml
+++ b/app/views/admin/instances/index.html.haml
@@ -41,6 +41,13 @@
                             class: 'string optional',
                             placeholder: I18n.t("admin.instances.#{key}")
 
+      - %i(by_comment).each do |key|
+        .input.string.optional
+          = form.text_field key,
+                            value: params[key],
+                            class: 'string optional',
+                            placeholder: I18n.t("admin.instances.#{key}")
+
       .actions
         %button.button= t('admin.accounts.search')
         = link_to t('admin.accounts.reset'), admin_instances_path, class: 'button negative'
