--- a/app/javascript/flavours/polyam/styles/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/accounts.scss
@@ -382,6 +382,10 @@
       color: $primary-text-color;
       font-weight: 700;
     }
+
+    .warning-hint {
+      font-weight: normal !important;
+    }
   }
 
   &__body {
