Add report note notifications to webUI
Adds new api types for `admin.report_note` notifications

Adds new components for `admin.report_note` notifications

Adds new column setting for report note notifications

Fixes a style issue where the timestamp was not in line with other notifications

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -289,7 +289,8 @@
 
   &--relationships-severance-event &__icon,
   &--admin-report &__icon,
-  &--admin-sign-up &__icon {
+  &--admin-sign-up &__icon,
+  &--admin-report-note &__icon {
     color: $dark-text-color;
   }
 
@@ -320,6 +321,7 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+      width: 100%; // Polyam: Consistent timestamp in report/report-note
 
       &__wrapper {
         display: flex;
