Fix checkmark color in report modal in homogay
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -252,6 +252,11 @@
   }
 }
 
+// Polyam: Fix color of checkmark
+.report-dialog-modal .dialog-option .poll__input {
+  color: $ui-base-color;
+}
+
 // settings
 
 // Polyam: Keep background in admin UI a bit darker
