Convert private comment field on domain blocks to text input
This allows easier adding and editing of private comments by giving more space.

Also when hitting enter on string inputs, it sends the form, with a text input that doesn't happen.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/domain_blocks/_form.html.haml
+++ b/app/views/admin/domain_blocks/_form.html.haml
@@ -34,7 +34,8 @@
                wrapper: :with_label
 .field-group
   = form.input :private_comment,
-               as: :string,
+               as: :text,
+               input_html: { rows: 8 },
                hint: t('admin.domain_blocks.private_comment_hint'),
                label: I18n.t('admin.domain_blocks.private_comment'),
                wrapper: :with_label
