Wrap private comment in instance page in `pre` tag
This preserves new lines in private comments, making them easier to read

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/instances/show.html.haml
+++ b/app/views/admin/instances/show.html.haml
@@ -98,7 +98,8 @@
         %tbody
           %tr
             %th= t('admin.instances.content_policies.comment')
-            %td= @instance.domain_block.private_comment
+            %td
+              %pre= @instance.domain_block.private_comment
           %tr
             %th= t('admin.instances.content_policies.reason')
             %td= @instance.domain_block.public_comment
