[Polyam] Fix duplicate border around search results
Port 315308b10cf1d6431053c1553a2f0b596471f039 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -176,6 +176,11 @@
   .explore__search-header {
     display: flex;
   }
+
+  .explore__search-results {
+    border: 0;
+    border-radius: 0;
+  }
 }
 
 .compose-panel {
