--- a/app/views/admin/account_warnings/_account_warning.html.haml
+++ b/app/views/admin/account_warnings/_account_warning.html.haml
@@ -2,7 +2,7 @@
   .log-entry__header
     .log-entry__avatar
       .indicator-icon{ class: account_warning.overruled? ? 'success' : 'failure' }
-        = material_symbol 'warning'
+        = material_symbol 'warning', 'triangle-exclamation'
     .log-entry__content
       .log-entry__title
         = t(account_warning.action,
