--- a/app/views/admin/export_domain_blocks/_domain_block.html.haml
+++ b/app/views/admin/export_domain_blocks/_domain_block.html.haml
@@ -23,5 +23,5 @@
         = f.object.public_comment
       - if existing_relationships
         ·
-        = material_symbol 'warning'
+        = material_symbol 'warning', 'triangle-exclamation'
         = t('admin.export_domain_blocks.import.existing_relationships_warning')
