--- a/app/views/admin/invites/_invite.html.haml
+++ b/app/views/admin/invites/_invite.html.haml
@@ -12,7 +12,7 @@
 
   - if invite.valid_for_use?
     %td
-      = material_symbol 'person'
+      = material_symbol 'person', 'user'
       = invite.uses
       = " / #{invite.max_uses}" unless invite.max_uses.nil?
     %td
