--- a/app/views/admin/relays/_relay.html.haml
+++ b/app/views/admin/relays/_relay.html.haml
@@ -4,7 +4,7 @@
   %td
     - if relay.accepted?
       %span.positive-hint
-        = material_symbol('check')
+        = material_symbol('check', 'check')
         &nbsp;
         = t 'admin.relays.enabled'
     - elsif relay.pending?
@@ -13,7 +13,7 @@
       = t 'admin.relays.pending'
     - else
       %span.negative-hint
-        = material_symbol('close')
+        = material_symbol('close', 'xmark')
         &nbsp;
         = t 'admin.relays.disabled'
   %td
