--- a/app/views/admin/relays/_relay.html.haml
+++ b/app/views/admin/relays/_relay.html.haml
@@ -8,7 +8,7 @@
         &nbsp;
         = t 'admin.relays.enabled'
     - elsif relay.pending?
-      = material_symbol('hourglass')
+      = material_symbol('hourglass', 'hourglass-start')
       &nbsp;
       = t 'admin.relays.pending'
     - else
