--- a/app/views/settings/two_factor_authentication_methods/index.html.haml
+++ b/app/views/settings/two_factor_authentication_methods/index.html.haml
@@ -6,7 +6,7 @@
 
 %p.hint
   %span.positive-hint
-    = material_symbol 'check'
+    = material_symbol 'check', 'check'
     &nbsp;
     = t 'two_factor_authentication.enabled'
 
